--- a/package.json
+++ b/package.json
@@ -36,9 +36,5 @@
     },
     "rules": {}
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "browserslist": [ "> 1%", "last 2 versions", "not ie <= 8" ]
 }
