--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sanity/client": "^2.23.2",
+    "@sanity/image-url": "^1.0.1",
     "core-js": "^3.6.5",
+    "sanity-blocks-vue-component": "^1.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -36,5 +39,9 @@
     },
     "rules": {}
   },
-  "browserslist": [ "> 1%", "last 2 versions", "not ie <= 8" ]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
