--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@sanity/client": "^2.23.2",
     "@sanity/image-url": "^1.0.1",
+    "autoprefixer": "^9.8.8",
     "core-js": "^3.6.5",
+    "postcss": "^7.0.39",
     "sanity-blocks-vue-component": "^1.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
